--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
  </head>
- <body>
+ <body><img src="nature.jpg" alt="A beautiful scenery">
+
     
  </body>
- </html>
+ </html>git
