--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
  </head>
  <body><img src="nature.jpg" alt="A beautiful scenery">
+   <source src="redvideo.mp4" type="red/flower">
 
     
  </body>
- </html>git
+ </html>
